src/test/ui/inference/cannot-infer-closure.rs
fn main() {
    let x = || {
        Err(())?; //~ ERROR type annotations needed for the closure
        Ok(())
    };
}
